# Cairn

./: .gitattributes  .gitignore  CHANGELOG.ja.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml  release.yml  website.yml
crates/cairn-cli/: Cargo.toml  README.md
crates/cairn-cli/src/: main.rs
crates/cairn-cli/tests/: cli_parse.rs
crates/cairn-core/: Cargo.toml  README.md
crates/cairn-core/src/: ast.rs  error.rs  lex.rs  parse.rs
crates/cairn-core/tests/: lex.rs  parse_commands.rs  parse_examples.rs
crates/cairn-core/tests/snapshots/: parse_examples__parses_cottage.snap  parse_examples__parses_redstone_door.snap  parse_examples__parses_themed_tower.snap  parse_examples__parses_village.snap
crates/cairn-formats/: Cargo.toml  README.md
crates/cairn-formats/src/: lib.rs
crates/cairn-lang-cli/: Cargo.toml  README.md
crates/cairn-lang-cli/src/: main.rs
crates/cairn-lang-cli/tests/: cli_check.rs  cli_compile.rs  cli_info.rs  cli_lower.rs  cli_parse.rs
crates/cairn-lang-core/: Cargo.toml  README.md
crates/cairn-lang-core/src/: ast.rs  error.rs  ids.rs  lex.rs  lib.rs  parse.rs  suggest.rs
crates/cairn-lang-core/src/block_array/: lower.rs  material.rs  mod.rs  openings.rs  roof.rs  walkway.rs
crates/cairn-lang-core/src/check/: connect_arity.rs  diagnostic.rs  duplicate.rs  keyword_allowlist.rs  mod.rs  sink.rs  type_mismatch.rs
crates/cairn-lang-core/src/intent/: keyword_table.rs  lower.rs  member.rs  mod.rs  semantic_level.rs
crates/cairn-lang-core/src/lock/: hash.rs  mod.rs  schema.rs
crates/cairn-lang-core/src/resolve/: binding.rs  mod.rs  requires_parse.rs  resolver.rs  version_axes.rs
crates/cairn-lang-core/tests/: at_side_walkway_lower.rs  check_clean_examples.rs  check_connect_arity.rs  check_duplicate.rs  check_keyword_allowlist.rs  check_type_mismatch.rs  cottage_lower.rs  intent_lower.rs  l_walkway_lower.rs  lex.rs  lock.rs  parse_commands.rs  parse_examples.rs  silent_skip_arms.rs  span_propagation.rs  village_lower.rs  window_walkway_lower.rs
crates/cairn-lang-core/tests/fixtures/check/: clean.crn  duplicate.crn  type_mismatch.crn  unknown_keyword.crn
crates/cairn-lang-core/tests/snapshots/: intent_lower__lowers_cottage.snap  intent_lower__lowers_redstone_door.snap  intent_lower__lowers_themed_tower.snap  intent_lower__lowers_village.snap  lock__l8_sample_lockfile_yaml_snapshot.snap  lock__lockfile_walkways_yaml_snapshot.snap  parse_examples__parses_cottage.snap  parse_examples__parses_redstone_door.snap  parse_examples__parses_themed_tower.snap  parse_examples__parses_village.snap
crates/cairn-lang-formats/: Cargo.toml  README.md  build.rs
crates/cairn-lang-formats/registry-data/java/: data_versions.json  materials.json
crates/cairn-lang-formats/src/: data_version.rs  java_structure.rs  lib.rs
crates/cairn-lang-formats/src/registry/: data_versions.rs  hash.rs  load.rs  manifest.rs  materials.rs  mod.rs
crates/cairn-lang-formats/src/registry/snapshots/: cairn_lang_formats__registry__load__tests__builtin_java_pack_hash.snap
crates/cairn-lang-formats/tests/: java_structure.rs
crates/cairn-lang-formats/tests/snapshots/: java_structure__f11_unit_air_debug_snapshot_is_stable.snap
crates/cairn-lang-lsp/: Cargo.toml  README.md
crates/cairn-lang-lsp/src/: lib.rs
crates/cairn-lang-nbt/: Cargo.toml  README.md
crates/cairn-lang-nbt/src/: java.rs  lib.rs  tag.rs
crates/cairn-lang-nbt/tests/: java_writer.rs
crates/cairn-lang-redstone/: Cargo.toml  README.md
crates/cairn-lang-wasm/: Cargo.toml  README.md
crates/cairn-lang-wasm/src/: lib.rs
crates/cairn-lsp/: Cargo.toml  README.md
crates/cairn-lsp/src/: lib.rs
crates/cairn-nbt/: Cargo.toml  README.md
crates/cairn-nbt/src/: lib.rs
crates/cairn-redstone/: Cargo.toml  README.md
crates/cairn-redstone/src/: lib.rs
crates/cairn-wasm/: Cargo.toml  README.md
crates/cairn-wasm/src/: lib.rs
data/registry/java/: pack.json
examples/: at-side-walkway.crn  cottage.crn  l-walkway.crn  redstone-door.crn  roof-flat.crn  roof-hip.crn  roof-shed.crn  themed-tower.crn  village.crn  window-walkway.crn
spec/: README.md  architecture.md  blockstate.md  compilation.md  components-editing-sites.md  ecosystem-interop.md  entities.md  evaluation.md  lint.md  materials-themes.md  open-issues.md  overview.md  principles.md  redstone.md  syntax.md  versioning-editions.md
website/: README.md  astro.config.mjs  package.json  wrangler.jsonc
website/src/content/docs/: development.md  examples.md  index.mdx  introduction.md  playground.mdx  roadmap.md  tutorial.md
website/src/content/docs/ja/: examples.md  index.mdx  introduction.md  playground.mdx  roadmap.md  tutorial.md
website/src/content/docs/ja/spec/: architecture.md  blockstate.md  compatibility.md  compilation.md  components-editing-sites.md  ecosystem-interop.md  entities.md  evaluation.md  glossary.md  index.md  lint.md  materials-themes.md  open-issues.md  overview.md  principles.md  redstone.md  syntax.md  versioning-editions.md
website/src/content/docs/spec/: architecture.md  blockstate.md  compatibility.md  compilation.md  components-editing-sites.md  ecosystem-interop.md  entities.md  evaluation.md  glossary.md  index.md  lint.md  materials-themes.md  open-issues.md  overview.md  principles.md  redstone.md  syntax.md  versioning-editions.md
website/src/styles/: cairn.css
