[workspace]
resolver = "2"
members = [
    "crates/cairn-lang-core",
    "crates/cairn-lang-cli",
    "crates/cairn-lang-nbt",
    "crates/cairn-lang-formats",
    "crates/cairn-lang-redstone",
    "crates/cairn-lang-lsp",
    "crates/cairn-lang-wasm",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/kage1020/Cairn"
homepage = "https://github.com/kage1020/Cairn"
authors = ["kage1020 and the Cairn authors"]
# All crates stay unpublished until the first real release flips this to true
# (see CHANGELOG `[Unreleased]` and the planned 2026.07.0 cron PR). This keeps
# release-plz from trying to publish the 0.0.0 placeholder on every push.
publish = false

[workspace.dependencies]
cairn-lang-core = { version = "0.0.0", path = "crates/cairn-lang-core" }
cairn-lang-nbt = { version = "0.0.0", path = "crates/cairn-lang-nbt" }
cairn-lang-formats = { version = "0.0.0", path = "crates/cairn-lang-formats" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
