[workspace]
resolver = "2"
members = [
    "crates/cairn-lang-core",
    "crates/cairn-lang-cli",
    "crates/cairn-lang-nbt",
    "crates/cairn-lang-formats",
    "crates/cairn-lang-redstone",
    "crates/cairn-lang-lsp",
    "crates/cairn-lang-wasm",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/kage1020/Cairn"
homepage = "https://github.com/kage1020/Cairn"
authors = ["kage1020 and the Cairn authors"]
# Publish is enabled so release-plz's monthly minor path can open a release PR;
# without this it silently no-ops (`prs:[]`) because it treats `publish = false`
# crates as intentionally excluded from crates.io release automation. The
# workflow's pre-set version step is what actually decides the CalVer number, so
# this flag being on does not cause a spurious 0.0.0 push — release-plz only
# reaches `cargo publish` when a release PR is merged with a real bumped version.
publish = true

[workspace.dependencies]
cairn-lang-core = { version = "0.0.0", path = "crates/cairn-lang-core" }
cairn-lang-nbt = { version = "0.0.0", path = "crates/cairn-lang-nbt" }
cairn-lang-formats = { version = "0.0.0", path = "crates/cairn-lang-formats" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
