[package]
name = "cairn-cli"
description = "Command-line interface for the Cairn language"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-core = { path = "../cairn-core" }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.150"
