[package]
name = "cairn-formats"
description = "Readers and writers for .nbt, .litematic, .schem, and .mcstructure"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }
cairn-nbt = { path = "../cairn-nbt" }

[lints]
workspace = true
