[package]
name = "cairn-formats"
description = "Readers and writers for .nbt, .litematic, .schem, and .mcstructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-core = { workspace = true }
cairn-nbt = { workspace = true }

[lints]
workspace = true
