[package]
name = "cairn-lang-cli"
description = "Command-line interface for the Cairn language"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-lang-core = { workspace = true }

[lints]
workspace = true
