[package]
name = "cairn-lang-core"
description = "Core of the Cairn language: parser, IR, compiler"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yml = "0.0.13"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml"] }
