[package]
name = "cairn-lang-formats"
description = "Readers and writers for .nbt, .litematic, .schem, and .mcstructure"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-lang-core = { workspace = true }
cairn-lang-nbt = { workspace = true }

[lints]
workspace = true
