[package]
name = "cairn-lang-formats"
description = "Readers and writers for .nbt, .litematic, .schem, and .mcstructure"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-lang-core = { workspace = true }
cairn-lang-nbt = { workspace = true }
indexmap = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml"] }
