[package]
name = "cairn-lang-lsp"
description = "Language Server Protocol implementation for the Cairn language"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-lang-core = { workspace = true }

[lints]
workspace = true
