[package]
name = "cairn-lang-nbt"
description = "NBT codec for the Cairn language (Java big-endian and Bedrock little-endian)"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
