[package]
name = "cairn-lsp"
description = "Language Server Protocol implementation for the Cairn language"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }

[lints]
workspace = true
