[package]
name = "cairn-lsp"
description = "Language Server Protocol implementation for the Cairn language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-core = { workspace = true }

[lints]
workspace = true
