[package]
name = "cairn-redstone"
description = "Redstone logic synthesis, place-and-route, and a headless tick simulator"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }

[lints]
workspace = true
