[package]
name = "cairn-redstone"
description = "Redstone logic synthesis, place-and-route, and a headless tick simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cairn-core = { workspace = true }

[lints]
workspace = true
