[package]
name = "cairn-wasm"
description = "WebAssembly bindings exposing the Cairn compiler in the browser"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cairn-core = { path = "../cairn-core" }

[lints]
workspace = true
